# sentinel-stack

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: run_all.sh  scenario_01.sh
docker/: Dockerfile  docker-compose.yml
docs/: aerospace-job-requirements.md  architecture.md  comm-protocol.md  packet-analyzer.md  portfolio-interview-guide.md  references.md  rtos-design.md  running-guide.md
docs/test-results/: detection_accuracy.md  latency_benchmark.md  rtos_jitter_report.md  static_analysis.md
hal/: CMakeLists.txt
hal/include/: hal_can.h  hal_common.h  hal_i2c.h  hal_spi.h  hal_uart.h
hal/src/: hal_can_posix.c  hal_i2c_posix.c  hal_spi_posix.c  hal_uart_posix.c
hal/tests/: test_hal_loopback.c
hil-simulator/: CMakeLists.txt
hil-simulator/include/: imu_sensor.h
hil-simulator/src/: hil_demo.c  imu_sim.c
packet-analyzer/: CMakeLists.txt
packet-analyzer/include/: capture.h  parser.h  reporter.h  rule_engine.h
packet-analyzer/rules/: default.rules
packet-analyzer/src/: capture.c  parser_custom.c  parser_eth.c  parser_ip.c  parser_tcp.c  reporter.c  rule_engine.c
packet-analyzer/tests/: test_parser.c
qemu/: linker.ld  run_arm.sh
rtos-scheduler/: CMakeLists.txt
rtos-scheduler/include/: scheduler.h  task.h  timer.h
rtos-scheduler/src/: edf.c  rms.c  scheduler.c  timer.c
rtos-scheduler/tests/: test_jitter.c  test_scheduler.c
scripts/: run_analysis.sh
socket-comm/: CMakeLists.txt
socket-comm/include/: comm_node.h  crypto.h  io_multiplexer.h  protocol.h  pubsub.h  tcp_transport.h  udp_transport.h
socket-comm/src/: comm_node.c  crypto.c  io_epoll.c  io_kqueue.c  protocol.c  pubsub.c  tcp_transport.c  udp_transport.c
socket-comm/tests/: test_latency.c  test_reconnect.c
